gcc/testsuite/rust/rustc/ui/parser/doc-before-attr.rs
fn main() {}

/// hi
#[derive(Debug)] // { dg-error "" "" { target *-*-* } }

